--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1795,6 +1795,8 @@ label.preferences-radio-choice-label {
 
 .custom_user_field,
 .bot_owner_user_field {
+    overflow: hidden;
+    text-overflow: ellipsis;
     .pill-container {
         min-height: 24px;
         max-width: 206px;
